--- a/src/Components/Search/search.module.scss
+++ b/src/Components/Search/search.module.scss
@@ -36,7 +36,7 @@
   border: none;
   background-color: #F2F2F2;
   padding: 6px 12px;
-  color: #C0C0C0;
+  color: #777777;
   font-weight: 400;
   z-index: 0;
   &::placeholder {
